Redefine Ozone AcceleratedWidget as int32_t.

Ozone's AcceleratedWidget was defined as intptr_t, and then used "raw"
as gfx::SurfaceHandle in IPCs, triggering build-time IPC sanity-check
failures.

Defining it as int32_t passes the sanity-check and helps ensure that no
new code tries to put actual pointers in there by mistake.

BUG=607014

Review-Url: https://codereview.chromium.org/1925483003
Cr-Commit-Position: refs/heads/master@{#390219}

Former-commit-id: af126a587f99d80a7a42bcfc4b76cffb3e78d974